--- a/src/.vuepress/theme/styles/partials/_navbar.scss
+++ b/src/.vuepress/theme/styles/partials/_navbar.scss
@@ -65,3 +65,8 @@
     border: 1px solid $grey-lighter !important;
   }
 }
+
+// Mobile navbar
+.navbar-burger {
+  color: $white;
+}
